test(chaos): scenario 07 use proxy disable instead of limit_data toxic (qfg-47c2.29)
limit_data with bytes=1 only trips the close on the next upstream byte
to the SDK — for SSE that's the 30s server heartbeat, outside scenario
07's 15s within_ms assertion window. sdk-java was passing only because
chaos sets Options.sseReadWatchdog=5s, which happens to trip inside the
15s window — a coincidental pass on the read-deadline path, not a real
test of half-open detection. Switch sse_half_open_after_bytes to
setEnabled(false) and let the scenario's existing clear step re-enable.
Mirrors sdk-go, sdk-node, sdk-python, sdk-ruby.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>